--- a/composer.json
+++ b/composer.json
@@ -21,8 +21,8 @@
     "easyframework/generics": "~2.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "~5.0",
-    "codacy/coverage": "dev-master"
+    "phpunit/phpunit": "^5.0|^6.5",
+    "codacy/coverage": "^1.4"
   },
   "autoload": {
     "psr-4": {
